now cleaning some txt files (these are the ones that cant be added to EXTRAREQS without causing force to duplicate commands)

--- a/Manual/Makefile
+++ b/Manual/Makefile
@@ -102,7 +102,7 @@ Examples :
 clean: 
 	rm -f *~ *bak $(TARGET).{toc,aux,ps,pdf,out,log,lof,lot,idx,bbl,blg,dvi,bib} index.aux
 	rm -f head.{f,B,xaif,xb.x2w.B,xb.x2w.w2f.f,xb.x2w.w2f.pp.f,xb.xaif}
-	rm -f iaddr.c OAD_active.f90 w2f__types.f90
+	rm -f iaddr.c OAD_active.f90 w2f__types.f90 openadScriptOutput.txt versionInfoOpenAD.txt
 	rm -rf $(EXTRAREQS)
 	cd Examples && $(MAKE) $@
 
